<resources>
    <string name="app_name">Siddharth_pugalia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">WeathrTrackr</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_history">History</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_map">Map</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Menu</string>


    <string name="map_header">Map Settings</string>

    <string name="weather_key">2a022ff242c16a1142fd0094e90cab63</string>
    <string name="to_pin_current_location">to pin current location</string>
    <string name="Save_loc_to_db">Save Locations To Database</string>
    <string name="no_history">No History</string>
    <string name="checked_in">Checked in</string>
    <string name="date">Date</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="temperature">Temperature</string>
    <string name="weather">Weather</string>
    <string name="settings_fragment_delete_database_option">Delete database</string>
    <string name="settings_fragment_locations_database_label"><b>Locations Database</b></string>
    <string name="settings_fragment_save_location_to_database_option">Save locations to database</string>

    <string name="developed_by_label"><b>Developed By</b></string>
    <string name="developer_name">Siddharth Pugalia</string>
    <string name="app_version_label"><b>Version</b></string>
    <string name="app_version">Beta-1.0</string>
    <string name="about_label"><b>About</b></string>
    <string name="about">This app will fetch the weather at your current location when you press the Floating Action Button (FAB). Your location is plotted on to a map. Clicking on the marker will display the time that you checked in at that location and the weather at the time of check in. This information is presented to you in the form of a Snackbar at the bottom of the screen.</string>
    <string name="delete">Delete</string>

</resources>